4
===
Fixed bug with pixmap_temp
New FILL fuction, linked to C module (pekayatt)
Color list in Area.py is not used anymore. Toolbox.py now passes a gdk.Color (nathalia.sautchuk, alexandre)
Fixed Cursors errors (nathalia.sautchuk)
Fixed Image load bug, now enableUndo is working with it (pekayatt)
Added COPYING (alexandre)
Fixed bug that corrupted colors in toolbox.py (alexandre)
Adding file header and cleaning unused files (nathalia.sautchuk)
Tools assigned by string instead of numbers (nathalia.sautchuk)
Changing and Adding new colors (nathalia.sautchuk)
ToolsToolbar now keeps color and size when user chooses different tools (alexandre)
Adding new cursors (nathalia.sautchuk)
New selection, the selectionbox remains (pekayatt)
Fixed line size (nathalia.sautchuk, alexandre)
Implemented Eraser shapes (nathalia.sautchuk)
Fixed undo bugs and new selection function (pekayatt)
Trapezoid and triangle functions added, minor changes on fill function, bug on fuction undo solved (andre)
Fill function changed (alexandre)

3
===
Addition of a new SVG Icon with fixes to some bugs. Project name changed from Oficina to Paint

2
===
Make it work with python setup.py: John Palmeiri and Manusheel Gupta

1
===
First Sugar Version: joyce, andremossinato, pekayatt, barbolo, nathalia.sautchuk, alexandremartinazzo from LSI Research Group, University of Sau Paulo,Brazil with manusheel gupta(manu@laptop.org) and Eben Eliason(eben@laptop.org)from OLPC, Cambridge
