@@ -1,63 +1,0 @@
-/*
-eggfill.h
-
-Fill function and queue list
-
-
-Copyright 2007, NATE-LSI-EPUSP
-
-Oficina is developed in Brazil at Escola Politécnica of 
-Universidade de São Paulo. NATE is part of LSI (Integrable
-Systems Laboratory) and stands for Learning, Work and Entertainment
-Research Group. Visit our web page: 
-www.nate.lsi.usp.br
-Suggestions, bugs and doubts, please email oficina@lsi.usp.br
-
-Oficina is free software; you can redistribute it and/or
-modify it under the terms of the GNU General Public License 
-as published by the Free Software Foundation version 2 of 
-the License.
-
-Oficina is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-General Public License for more details.
-
-You should have received a copy of the GNU General Public
-License along with Oficina; if not, write to the
-Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, 
-Boston, MA  02110-1301  USA.
-The copy of the GNU General Public License is found in the 
-COPYING file included in the source distribution.
-
-
-Authors:
-
-Joyce Alessandra Saul               (joycealess@gmail.com)
-Andre Mossinato                     (andremossinato@gmail.com)
-Nathalia Sautchuk Patrício          (nathalia.sautchuk@gmail.com)
-Pedro Kayatt                        (pekayatt@gmail.com)
-Rafael Barbolo Lopes                (barbolo@gmail.com)
-Alexandre A. Gonçalves Martinazzo   (alexandremartinazzo@gmail.com)
-
-*/
-#include <stdio.h>
-#include <stdlib.h>
-#include <gtk/gtk.h>
-
-/*to implement a queue */
-typedef int ElementType;
-struct Node;
-typedef struct Node *PtrToNode;
-typedef PtrToNode List;
-typedef PtrToNode Position;
-typedef struct QueueL  *Queue;
-int IsEmpty( Queue Q );
-Queue CreateQueue( void );
-void DisposeQueue( Queue Q );
-void MakeEmpty( Queue Q );
-void Enqueue( ElementType X, Queue Q );
-ElementType Front( Queue Q );
-void Dequeue( Queue Q );
-/*end of queue*/
-void fill(GdkDrawable *drawable, GdkGC *gc, int x, int y, int width, int height, int color);
